# langchain-code-generator

./: README.md  app.py  main.py  pyproject.toml
src/: code_rectifier.py  config.py  fastapi_executor.py  nodes.py  sandbox_executor.py  state.py  workflow.py
static/: style.css
templates/: index.html
